# tg

./: .gitignore  .travis.yml  .valgrind.supp  Makefile  Makefile.am  Makefile.old  README  README.md  algo.c  audio.c  config.c  configure.ac  interface.c  prefs.c  tg-timer.rc  tg.c  tg.css  tg.h  tg.ini  version
docs/: tg-timer.1
icons/: Makefile.am  install-icons.sh  make-icons.sh  make-msw-ico.sh  sizes  tg-timer-lt.desktop  tg-timer.desktop  tg-timer.xml
m4/: attributes.m4
packaging/: LICENSE.rtf  make_deb.sh  make_msi.sh  make_tgz.sh  make_wxs.sh  make_zip.sh  new_version.sh  tg-timer-lt.desktop  tg-timer.in.spec  tg-timer.inc.in  tg-timer.wxs  tg-timer.wxs.template
packaging/debian/: changelog  control  copyright  rules
src/: algo.c  audio.c  audio.h  audio_settings.c  computer.c  config.c  interface.c  output_panel.c  serializer.c  tg.h
src/gtk/: gtkHelper.c  gtkHelper.h
