iconsdir = $(datadir)/icons/hicolor
nobase_dist_icons_DATA = \
			 16x16/apps/tg-timer.png \
			 22x22/apps/tg-timer.png \
			 32x32/apps/tg-timer.png \
			 48x48/apps/tg-timer.png \
			 64x64/apps/tg-timer.png \
			 128x128/apps/tg-timer.png \
			 256x256/apps/tg-timer.png \
			 scalable/apps/tg-timer.svg \
			 16x16/mimetypes/application-x-tg-timer-data.png \
			 22x22/mimetypes/application-x-tg-timer-data.png \
			 32x32/mimetypes/application-x-tg-timer-data.png \
			 48x48/mimetypes/application-x-tg-timer-data.png \
			 64x64/mimetypes/application-x-tg-timer-data.png \
			 128x128/mimetypes/application-x-tg-timer-data.png \
			 256x256/mimetypes/application-x-tg-timer-data.png \
			 scalable/mimetypes/application-x-tg-timer-data.svg

